--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="ru.napoleonit.multimoduletests">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
     <dist:module dist:instant="true" />
 
     <application
