--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,5 +16,9 @@ ext.sdkVersions = [
 
         recyclerView: '1.1.0',
 
-        fragmentKtx : '1.1.0'
+        fragmentKtx : '1.1.0',
+
+        viewpager2  : '1.0.0',
+
+        glide       : '4.9.0'
 ]
